fixes solar system getting cut off on ipad views

--- a/src/SolarSystem/solar_system.module.css
+++ b/src/SolarSystem/solar_system.module.css
@@ -13,7 +13,7 @@
     }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 875px) {
     .heroVisual {
         min-height: 350px;
         max-width: none;
@@ -123,7 +123,7 @@
     }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 875px) {
     .solarGlow {
         width: 128px;
         height: 128px;
