--- a/src/app.module.css
+++ b/src/app.module.css
@@ -235,14 +235,6 @@
         display: block;
     }
 
-    .hero {
-        display: grid;
-        grid-template-columns: minmax(0, 1.1fr) minmax(300px, 0.9fr);
-        gap: 2rem;
-        align-items: center;
-        padding: 0.625rem 0 1.5rem;
-    }
-
     .socialLinks {
         gap: 1rem;
         margin-top: 2rem;
@@ -269,6 +261,16 @@
     .tagGroup {
         gap: 1rem;
         margin-top: 2rem;
+    }
+}
+
+@media (min-width: 875px) {
+    .hero {
+        display: grid;
+        grid-template-columns: minmax(0, 1.1fr) minmax(300px, 0.9fr);
+        gap: 2rem;
+        align-items: center;
+        padding: 0.625rem 0 1.5rem;
     }
 }
 
